# Jogo-da-velha

./: .breakpoints  main.py  pyproject.toml  requiriments.txt
bakup/: main (1).py
